<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/backpack_activity_popup"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/backpack_edit_activity_popup_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/backpack_edit_activity_popup_textInputLayout_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nazwa" />

    </android.support.design.widget.TextInputLayout>

...
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="384dp" />

    <Button
        android:id="@+id/backpack_edit_activity_popup_OK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Utwórz"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/backpack_edit_activity_popup_textInputLayout"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
...
