<resources>
    <string name="app_name">TrainingPlanMaker</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_backpack_edit">BackpackEditActivity</string>
    <string name="title_activity_backpack__checklist">Checklista</string>
    <string name="title_activity_profile_measurement">Moje pomiary</string>
    <string name="title_activity_atlas">AtlasActivity</string>
    <string name="action_settings">Settings</string>
...
